2004-10-03  Daniel Jacobowitz  <dan@debian.org>

	* dwarf2read.c (read_subrange_type): Add comment for variable
	sized arrays.

2004-10-03  Paul Hilfinger  <hilfingr@nile.gnat.com>

	* Makefile.in (.l.c): Modify rule for compatibility with recent
	versions of flex, and remove most command-line options.
	* ada-lex.l: Add %options line in place of -I -i and -s command-line
	options.

2004-10-02  Paul N. Hilfinger  <Hilfinger@gnat.com>

        Turn on initial Ada support (mainly expression evaluation).
	
        * Makefile.in (SFILES): Remove ada-tasks.c.
	(HFILES_NO_SRCDIR): Add ada-lang.h.
	(COMMON_OBS): Add ada-lang.o, ada-typeprint.o, ada-valprint.o.
	(YYOBJ): Add ada-exp.o.
	(rule .l.c): Generalize to not mention ada.
	* symtab.c: Include ada-lang.h.
	(symbol_natural_name, symbol_demangled_name)
	(symbol_search_name): Add Ada case.

2004-10-01  Andrew Cagney  <cagney@gnu.org>

	* Makefile.in (COMMON_OBS): Add inf-child.o.
	* config/vax/obsd.mh (NATDEPFILES): Remove inf-child.o.
	* config/vax/nbsdelf.mh (NATDEPFILES): Remove inf-child.o.
	* config/vax/nbsdaout.mh (NATDEPFILES): Remove inf-child.o.
	* config/powerpc/nbsd.mh (NATDEPFILES): Remove inf-child.o.
	* config/m88k/obsd.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/obsdaout.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/obsd64.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/obsd.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/nbsdelf.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/nbsdaout.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/nbsd64.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/fbsd64.mh (NATDEPFILES): Remove inf-child.o.
	* config/i386/fbsd.mh (NATDEPFILES): Remove inf-child.o.

	* target.c (xfer_using_stratum): Change return type to LONGEST.
	On each iteration offset, readbuf and writebuf.
	* inf-ptrace.c (inf_ptrace_xfer_partial): Simplify computation of
	partial_length, and read/modify/write predicate, update comments.